feat: add delete table
